Fix slack join moving on collapse

--- a/apps/web/styles/_sidebar.scss
+++ b/apps/web/styles/_sidebar.scss
@@ -83,7 +83,7 @@
       padding: 0 0 0 1rem;
       position: relative;
       right: -5px;
-      width: calc(100% - 1rem);
+      width: 17rem;
     }
 
     &:hover {
